--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "bulma": "^0.7.4",
     "core-js": "^2.6.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
